Bug 474909 - Dolphin crashes during kio-admin operation
Summary: Dolphin crashes during kio-admin operation
Status: RESOLVED FIXED
Alias: None
Product: kio-admin
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 23.04.3
Platform: unspecified Linux
: HI crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: drkonqi
: 468993 469528 478667 478873 480146 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-26 16:46 UTC by Elite
Modified: 2024-01-25 12:23 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elite 2023-09-26 16:46:19 UTC
Application: dolphin (23.04.3)

Qt Version: 5.15.10
Frameworks Version: 5.109.0
Operating System: Linux 6.5.5-200.fsync.fc38.x86_64 x86_64
Windowing System: Wayland
Distribution: Nobara Linux 38 (KDE Plasma)
DrKonqi: 5.27.8 [KCrashBackend]

-- Information about the crash:
Was copping the oft fonts from downloads to tthe fonts folder an they would get hung up at a random pont then stop. then it crashed after 4 ish min of waiting.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault

[KCrash Handler]
#4  0x00007fea022c5242 in QVector<KIO::Task>::realloc(int, QFlags<QArrayData::AllocationOption>) () from /lib64/libKF5KIOCore.so.5
#5  0x00007fea022c8687 in KIO::Connection::send(int, QByteArray const&) () from /lib64/libKF5KIOCore.so.5
#6  0x00007fea02302b99 in KIO::SlaveBase::send(int, QByteArray const&) () from /lib64/libKF5KIOCore.so.5
#7  0x00007fea022fd907 in KIO::SlaveBase::mimeType(QString const&) () from /lib64/libKF5KIOCore.so.5
#8  0x00007fea006e8481 in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#9  0x00007fe9d8e26b15 in OrgKdeKioAdminGetCommandInterface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib64/qt5/plugins/kf5/kio/admin.so
#10 0x00007fe9d8e26c42 in OrgKdeKioAdminGetCommandInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/qt5/plugins/kf5/kio/admin.so
#11 0x00007fea019bd38b in QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QVector<int> const&, int) () from /lib64/libQt5DBus.so.5
#12 0x00007fea006ded2b in QObject::event(QEvent*) () from /lib64/libQt5Core.so.5
#13 0x00007fea013aeb75 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#14 0x00007fea006b41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#15 0x00007fea006b7655 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQt5Core.so.5
#16 0x00007fea00706c5f in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#17 0x00007fe9fe3134fc in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#18 0x00007fe9fe3716b8 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#19 0x00007fe9fe310b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#20 0x00007fea00706749 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#21 0x00007fea006b2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#22 0x00007fe9d8e21427 in AdminWorker::get(QUrl const&) () from /usr/lib64/qt5/plugins/kf5/kio/admin.so
#23 0x00007fea02305ee7 in KIO::WorkerSlaveBaseBridge::get(QUrl const&) () from /lib64/libKF5KIOCore.so.5
#24 0x00007fea0230271d in KIO::SlaveBase::dispatch(int, QByteArray const&) () from /lib64/libKF5KIOCore.so.5
#25 0x00007fea022faa3d in KIO::SlaveBase::dispatchLoop() () from /lib64/libKF5KIOCore.so.5
#26 0x00007fea023784d4 in KIO::WorkerThread::run() () from /lib64/libKF5KIOCore.so.5
#27 0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#28 0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#29 0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 8 (Thread 0x7fe988ff96c0 (LWP 27893) "KIO::WorkerThre"):
#1  0x00007fe9fe372420 in sysprof_collector_get () from /lib64/libglib-2.0.so.0
#2  0x00007fe9fe372dee in sysprof_collector_mark_vprintf () from /lib64/libglib-2.0.so.0
#3  0x00007fe9fe36971c in g_trace_mark.constprop () from /lib64/libglib-2.0.so.0
#4  0x00007fe9fe3131b4 in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#5  0x00007fe9fe371491 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#6  0x00007fe9fe310b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#7  0x00007fea00706766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#8  0x00007fea006b2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#9  0x00007fe9d8e2017b in AdminWorker::put(QUrl const&, int, QFlags<KIO::JobFlag>) () from /usr/lib64/qt5/plugins/kf5/kio/admin.so
#10 0x00007fea0230612e in KIO::WorkerSlaveBaseBridge::put(QUrl const&, int, QFlags<KIO::JobFlag>) () from /lib64/libKF5KIOCore.so.5
#11 0x00007fea023026d1 in KIO::SlaveBase::dispatch(int, QByteArray const&) () from /lib64/libKF5KIOCore.so.5
#12 0x00007fea022faa3d in KIO::SlaveBase::dispatchLoop() () from /lib64/libKF5KIOCore.so.5
#13 0x00007fea023784d4 in KIO::WorkerThread::run() () from /lib64/libKF5KIOCore.so.5
#14 0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#15 0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#16 0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7fe9897fa6c0 (LWP 27816) "KIO::WorkerThre"):
#1  0x00007fe9fe371629 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#2  0x00007fe9fe310b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fea00706766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007fea006b2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007fe9d8e2017b in AdminWorker::put(QUrl const&, int, QFlags<KIO::JobFlag>) () from /usr/lib64/qt5/plugins/kf5/kio/admin.so
#6  0x00007fea0230612e in KIO::WorkerSlaveBaseBridge::put(QUrl const&, int, QFlags<KIO::JobFlag>) () from /lib64/libKF5KIOCore.so.5
#7  0x00007fea023026d1 in KIO::SlaveBase::dispatch(int, QByteArray const&) () from /lib64/libKF5KIOCore.so.5
#8  0x00007fea022faa3d in KIO::SlaveBase::dispatchLoop() () from /lib64/libKF5KIOCore.so.5
#9  0x00007fea023784d4 in KIO::WorkerThread::run() () from /lib64/libKF5KIOCore.so.5
#10 0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#11 0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#12 0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7fe9da1ff6c0 (LWP 22618) "QThread"):
#1  0x00007fe9fe3680df in g_wakeup_acknowledge () from /lib64/libglib-2.0.so.0
#2  0x00007fe9fe313bfc in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x00007fe9fe371520 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#4  0x00007fe9fe310b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x00007fea00706766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#6  0x00007fea006b2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#7  0x00007fea004f45d0 in QThread::exec() () from /lib64/libQt5Core.so.5
#8  0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#9  0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#10 0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7fe9d99fe6c0 (LWP 22617) "dolphin"):
#1  0x00007fe9fda650cc in usbmuxd_listen_inotify () from /lib64/libusbmuxd-2.0.so.6
#2  0x00007fe9fda65dc2 in device_monitor () from /lib64/libusbmuxd-2.0.so.6
#3  0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#4  0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7fe9ec9ab6c0 (LWP 22613) "WaylandEventThr"):
#1  0x00007fe9fe13ac6c in QtWaylandClient::EventThread::run() () from /lib64/libQt5WaylandClient.so.5
#2  0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#3  0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#4  0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fe9ed1ac6c0 (LWP 22612) "WaylandEventThr"):
#1  0x00007fe9ffea9b19 in pthread_cond_wait () from /lib64/libc.so.6
#2  0x00007fea004fb697 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007fe9fe13ac19 in QtWaylandClient::EventThread::run() () from /lib64/libQt5WaylandClient.so.5
#4  0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#5  0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#6  0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fe9edbff6c0 (LWP 22611) "QDBusConnection"):
#1  0x00007fe9fe371629 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#2  0x00007fe9fe310b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fea00706766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#4  0x00007fea006b2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#5  0x00007fea004f45d0 in QThread::exec() () from /lib64/libQt5Core.so.5
#6  0x00007fea019aedab in QDBusConnectionManager::run() () from /lib64/libQt5DBus.so.5
#7  0x00007fea004f59dd in QThreadPrivate::start(void*) () from /lib64/libQt5Core.so.5
#8  0x00007fe9ffeaa8a7 in start_thread () from /lib64/libc.so.6
#9  0x00007fe9fff306f4 in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fe9fb23b9c0 (LWP 22610) "dolphin"):
#1  0x00007fe9ffea9b19 in pthread_cond_wait () from /lib64/libc.so.6
#2  0x00007fea004fb697 in QWaitCondition::wait(QMutex*, QDeadlineTimer) () from /lib64/libQt5Core.so.5
#3  0x00007fea004f5729 in QThread::wait(QDeadlineTimer) () from /lib64/libQt5Core.so.5
#4  0x00007fea02373690 in KIO::WorkerThread::~WorkerThread() () from /lib64/libKF5KIOCore.so.5
#5  0x00007fea006dd45b in QObjectPrivate::deleteChildren() () from /lib64/libQt5Core.so.5
#6  0x00007fea006e50f8 in QObject::~QObject() () from /lib64/libQt5Core.so.5
#7  0x00007fea023133e5 in KIO::Slave::~Slave() () from /lib64/libKF5KIOCore.so.5
#8  0x00007fea02326f09 in KIO::SimpleJob::doKill() () from /lib64/libKF5KIOCore.so.5
#9  0x00007fea01b4052d in KJob::kill(KJob::KillVerbosity) () from /lib64/libKF5CoreAddons.so.5
#10 0x00007fea0231831e in KIO::Job::doKill() () from /lib64/libKF5KIOCore.so.5
#11 0x00007fea01b4052d in KJob::kill(KJob::KillVerbosity) () from /lib64/libKF5CoreAddons.so.5
#12 0x00007fea0231831e in KIO::Job::doKill() () from /lib64/libKF5KIOCore.so.5
#13 0x00007fea01b4052d in KJob::kill(KJob::KillVerbosity) () from /lib64/libKF5CoreAddons.so.5
#14 0x00007fea028c5de9 in KFileItemModelRolesUpdater::killPreviewJob() () from /lib64/libdolphinprivate.so.5
#15 0x00007fea028abc9b in KFileItemListView::triggerVisibleIndexRangeUpdate() () from /lib64/libdolphinprivate.so.5
#16 0x00007fea028a46f2 in KItemListView::qt_metacall(QMetaObject::Call, int, void**) () from /lib64/libdolphinprivate.so.5
#17 0x00007fea028a478e in KFileItemListView::qt_metacall(QMetaObject::Call, int, void**) () from /lib64/libdolphinprivate.so.5
#18 0x00007fea004e2c23 in QPropertyAnimationPrivate::updateProperty(QVariant const&) () from /lib64/libQt5Core.so.5
#19 0x00007fea004df390 in QVariantAnimationPrivate::setCurrentValueForProgress(double) () from /lib64/libQt5Core.so.5
#20 0x00007fea004dd768 in QAbstractAnimation::setCurrentTime(int) () from /lib64/libQt5Core.so.5
#21 0x00007fea004dd903 in QAnimationTimer::updateAnimationsTime(long long) () from /lib64/libQt5Core.so.5
#22 0x00007fea004dbceb in QUnifiedTimer::updateAnimationTimers(long long) () from /lib64/libQt5Core.so.5
#23 0x00007fea004dc781 in QAnimationDriver::advanceAnimation(long long) () from /lib64/libQt5Core.so.5
#24 0x00007fea006decab in QObject::event(QEvent*) () from /lib64/libQt5Core.so.5
#25 0x00007fea013aeb75 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#26 0x00007fea006b41a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#27 0x00007fea00705a9b in QTimerInfoList::activateTimers() () from /lib64/libQt5Core.so.5
#28 0x00007fea00706399 in timerSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#29 0x00007fe9fe3134fc in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#30 0x00007fe9fe3716b8 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#31 0x00007fe9fe310b83 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#32 0x00007fea00706749 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#33 0x00007fea006b2b6b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#34 0x00007fea006badfb in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#35 0x0000564e8413f025 in main ()
[Inferior 1 (process 22610) detached]

Reported using DrKonqi
Comment 1 David Edmundson 2023-12-05 11:55:30 UTC
Thread 1 is closing

#4  0x00007fea02373690 in KIO::WorkerThread::~WorkerThread() () from /lib64/libKF5KIOCore.so.5

*Whilst* the worker thread Thread 9 is trying to push information.

The quit order seems off
Comment 2 Nicolas Fella 2023-12-22 23:04:03 UTC
*** Bug 469528 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas Fella 2023-12-22 23:04:35 UTC
*** Bug 478667 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2023-12-22 23:04:47 UTC
*** Bug 478873 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2024-01-22 13:31:04 UTC
*** Bug 480146 has been marked as a duplicate of this bug. ***
Comment 6 Nicolas Fella 2024-01-22 13:31:32 UTC
*** Bug 468993 has been marked as a duplicate of this bug. ***
Comment 7 Bug Janitor Service 2024-01-23 09:31:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1539
Comment 8 Harald Sitter 2024-01-25 11:36:00 UTC
Git commit 8562c506a79acec1bac05b2af64f46b89e8b20ff by Harald Sitter.
Committed on 25/01/2024 at 12:24.
Pushed by sitter into branch 'master'.

slavebase: abort mimetype emission when the worker was terminated

otherwise we end up looping until we run out of memory in our
transmission buffer

M  +4    -0    src/core/slavebase.cpp

https://invent.kde.org/frameworks/kio/-/commit/8562c506a79acec1bac05b2af64f46b89e8b20ff
Comment 9 Harald Sitter 2024-01-25 12:23:22 UTC
Git commit 37d9a439f4e4dc7f6fb44a0d8abbbb8343ab3f75 by Harald Sitter.
Committed on 25/01/2024 at 13:08.
Pushed by sitter into branch 'kf5'.

slavebase: abort mimetype emission when the worker was terminated

otherwise we end up looping until we run out of memory in our
transmission buffer


(cherry picked from commit 8562c506a79acec1bac05b2af64f46b89e8b20ff)

M  +4    -0    src/core/slavebase.cpp

https://invent.kde.org/frameworks/kio/-/commit/37d9a439f4e4dc7f6fb44a0d8abbbb8343ab3f75