slavebase: abort mimetype emission when the worker was terminated

otherwise we end up looping until we run out of memory in our
transmission buffer

BUG: 474909


(cherry picked from commit 8562c506a79acec1bac05b2af64f46b89e8b20ff)